--- a/src/components/allcarousel/slider/slider3/sliderItem/BigSlider.css
+++ b/src/components/allcarousel/slider/slider3/sliderItem/BigSlider.css
@@ -10,13 +10,13 @@
     display: flex;
 }
 .slick-prev{
-    left:0px;
+    left:10px !important;
     border-top-right-radius: 7px;
     border-bottom-right-radius: 7px;
     
 }
 .slick-next{
-    right:50px;
+    right:50px !important;
     border-top-left-radius: 7px;
     border-bottom-left-radius: 7px;
     
