--- a/src/contents/home/block0/style.css
+++ b/src/contents/home/block0/style.css
@@ -1,25 +1,25 @@
 .images{
-    background-image:url('https://makejourneys.com/assets/banner/1656053589278-banner.png'); 
+    background-image:url('https://img.freepik.com/free-photo/female-hairdresser-using-hairbrush-hair-dryer_329181-1929.jpg?size=626&ext=jpg'); 
     background-size: cover;
     background-origin:center;
-    height:500px;
+    height:650px;
     width: 100%;
    animation:showcase-animation 6s infinite alternate ease-in-out;
     transition:all 5s;
 }
 @keyframes showcase-animation{
     0%{
-        background-image:url('https://makejourneys.com/assets/banner/1656053589278-banner.png'); 
+        background-image:url('https://img.freepik.com/free-photo/female-hairdresser-using-hairbrush-hair-dryer_329181-1929.jpg?size=626&ext=jpg'); 
     }
  
     33%{
-        background-image: url('https://makejourneys.com/assets/banner/1656053596177-banner3.png');
+        background-image: url('https://img.freepik.com/premium-psd/hygiene-beauty-concept-mock-up_23-2148688773.jpg?size=626&ext=jpg');
     }
     66%{
-      background-image: url('https://makejourneys.com/assets/banner/1656053580569-banner1.png');
+      background-image: url('https://img.freepik.com/free-photo/woman-wore-pink-makeup-beautifully-decorated-flowers-isolated-white_1150-52235.jpg?size=626&ext=jpg');
     }
     100%{
-      background-image: url('https://makejourneys.com/assets/banner/1656053623133-banner2.png');
+      background-image: url('https://img.freepik.com/free-photo/high-fashion-look-glamor-closeup-portrait-beautiful-sexy-stylish-caucasian-young-woman-model-with-bright-makeup-with-red-lips-with-perfect-clean-skin-big-black-hat_158538-13488.jpg?size=626&ext=jpg');
     }
     
 }
